# actix_template

./: .env  Cargo.toml  README.md
client/: package-lock.json  package.json  vite.config.js
client/src/: Root.jsx  custom_colors.json  index.css  main.jsx
client/src/components/Auth/: LoginModal.jsx
client/src/components/Footer/: AppFooter.jsx
client/src/components/Header/: AppHeader.css  AppHeader.jsx
client/src/components/Navbar/: AboutNavGroup.jsx  AdminNavGroup.jsx  AppSideNavBar.jsx  PleaseLogin.jsx  SideNavToggle.jsx  SseNavGroup.jsx  UserNavGroup.jsx
client/src/context/: auth_api.js  sse_api.js  state.jsx  state_reducers.js  worker_websocket.js
client/src/pages/: Index.jsx
client/src/pages/Admin/: ApplicationDetails.jsx  ApplicationLogs.jsx  ApplicationName.jsx  ApplicationTest.jsx
client/src/pages/Error/: Error404.jsx  GeneralError.jsx
client/src/pages/SSE/: SendToSSEStream.jsx  WatchSSEStream.jsx
src/: .exampleenv  main.rs  routes.rs  state.rs
src/handlers/: auth_handlers.rs  chat_commands.rs  health_check.rs  lobby.rs  messages.rs  mod.rs  sse_handlers.rs  static_handler.rs  user_handlers.rs  web_socket_handlers.rs
src/models/: database_setup.sql
src/util/: date_format.rs
static/: index.html
static/assets/: index-0087cff0.js  index-12107319.js  index-127c3091.js  index-14de6d62.js  index-18a9fef2.css  index-2312ead8.js  index-23d4b08a.js  index-31a56641.js  index-336b6b8d.js  index-41dcb45f.js  index-436e1bee.js  index-585f7ac6.js  index-71871d5c.js  index-79522bf6.js  index-7d38e4e0.js  index-8384bc78.css  index-91c12f66.js  index-a26932b5.js  index-b1a66e26.css  index-b2e24b4d.js  index-c169625b.js  index-cf81281a.js  index-e3ee9901.js  index-ea012fd3.css  index-eaf8a8bc.js  index-f0bc469a.js  index-f22dadde.js  worker_websocket-91fc2720.js
(+1 files in other folders)
