[package]
name = "actix-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-rt = "2.9.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
openssl = { version = "0.10.56", features = ["vendored"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["postgres", "chrono", "macros", "runtime-tokio"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
