[package]
name = "actix-webserver-template"
authors = ["Andrew Caines <andrew.p.caines@gmail.com>"]
description = "A Actix Web framework Template with Postgres(Sqlx),Auth,JWT,SSE and Websockets"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
##Actix Dependancies
actix = "0.13.0"
actix-files = "0.6.2"
actix-rt = "2.9.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
actix-web-lab = "0.19.1"

##Auth Dependancies
actix-web-httpauth = "0.8.0"
argonautica = "0.2.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.7"

#Utility Dependancies
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde = { version = "1.0.188", features = ["derive"] }
futures-util = "0.3.28"

##DB Dependancies
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
openssl = { version = "0.10.56", features = ["vendored"] }
sqlx = { version = "0.7.1", features = [
    "postgres",
    "chrono",
    "macros",
    "runtime-tokio",
] }
